kube-credential/k8s/issuance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: issuance-service
  namespace: kube-credential
spec:
  selector:
    app: issuance
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
